# homework_2_opp

./: .gitignore  README.md  pyproject.toml  utils.init
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_iterator_py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_countable_py.html  z_145eef247bfb46b6_order_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_utils_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_category_py.html  z_a44f0ac069e85531_test_product_py.html  z_f88cefb995cf917b___init___py.html  z_f88cefb995cf917b___main___py.html
src/: 16.2_main.py  category.py  category_iterator.py  countable.py  order.py  product.py  utils.py
tests/: conftest.py  test_category.py  test_order.py  test_product.py
